Changed way to get version in DEB and added certs download

--- a/indexer/deb/debian/changelog
+++ b/indexer/deb/debian/changelog
@@ -1,4 +1,4 @@
-wazuh-indexer (4.3.0-RELEASE) unstable; urgency=low
+wazuh-indexer (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
