Fix files permissions and updated builder.sh

--- a/dashboard/deb/debian/changelog
+++ b/dashboard/deb/debian/changelog
@@ -1,5 +1,11 @@
-wazuh-dashboard (4.3.0-RELEASE) unstable; urgency=low
+wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
  -- Wazuh, Inc <info@wazuh.com>  Sat, 04 Dec 2021 14:04:26 +0000
+
+ wazuh-dashboard (4.2.5-RELEASE) UNRELEASED; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 15 Nov 2021 16:47:07 +0000
