--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -4,7 +4,7 @@ wazuh-indexer (VERSION-RELEASE) unstable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Wed, 5 Jan 2022 10:00:00 +0000
 
-wazuh-indexer (4.2.5-RELEASE) UNRELEASED; urgency=low
+wazuh-indexer (4.2.5-1) UNRELEASED; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
