Fix all PR comments

--- a/stack/dashboards/deb/debian/changelog
+++ b/stack/dashboards/deb/debian/changelog
@@ -4,7 +4,7 @@ wazuh-dashboards (VERSION-RELEASE) unstable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Sat, 04 Dec 2021 14:04:26 +0000
 
- wazuh-dashboards (4.2.5-RELEASE) UNRELEASED; urgency=low
+ wazuh-dashboards (4.2.5-1) UNRELEASED; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
