--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,10 +1,10 @@
-wazuh-dashboards (VERSION-RELEASE) unstable; urgency=low
+wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
  -- Wazuh, Inc <info@wazuh.com>  Sat, 04 Dec 2021 14:04:26 +0000
 
- wazuh-dashboards (4.2.5-1) UNRELEASED; urgency=low
+ wazuh-dashboard (4.2.5-1) UNRELEASED; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
