--- a/debs/SPECS/4.2.6/wazuh-manager/debian/changelog
+++ b/debs/SPECS/4.2.6/wazuh-manager/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-manager (4.2.6-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 25 Mar 2022 16:47:07 +0000
+
 wazuh-manager (4.2.5-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
