--- a/debs/SPECS/4.4.0/wazuh-manager/debian/changelog
+++ b/debs/SPECS/4.4.0/wazuh-manager/debian/changelog
@@ -1,16 +1,16 @@
-wazuh-agent (4.4.0-RELEASE) stable; urgency=low
+wazuh-manager (4.4.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
  -- Wazuh, Inc <info@wazuh.com>  Thu, 03 Nov 2022 12:31:50 +0000
 
-wazuh-agent (4.3.0-RELEASE) stable; urgency=low
+wazuh-manager (4.3.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
  -- Wazuh, Inc <info@wazuh.com>  Thu, 05 May 2022 12:00:00 +0000
 
-wazuh-agent (4.2.6-RELEASE) stable; urgency=low
+wazuh-manager (4.2.6-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
