--- a/debs/SPECS/wazuh-manager/debian/changelog
+++ b/debs/SPECS/wazuh-manager/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-manager (4.3.3-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com> Tue, 31 May 2022 15:41:39 +0000
+
 wazuh-manager (4.3.2-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
