--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-agent (4.3.5-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com> Wed, 29 Jun 2022 15:00:00 +0000
+
 wazuh-agent (4.3.4-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
