--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,3 +1,10 @@
+
+wazuh-agent (4.3.7-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 07 Jul 2022 15:00:00 +0000
+ 
 wazuh-agent (4.3.6-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
