--- a/debs/SPECS/3.13.5/wazuh-manager/debian/changelog
+++ b/debs/SPECS/3.13.5/wazuh-manager/debian/changelog
@@ -2,7 +2,7 @@ wazuh-manager (3.13.5-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
- -- Wazuh, Inc <info@wazuh.com>  Sat, Wed, 24 Aug 17:13:21 +0000
+ -- Wazuh, Inc <info@wazuh.com>  Wed, 24 Aug 17:13:21 +0000
 
 wazuh-manager (3.13.4-RELEASE) stable; urgency=low
 
