--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,3 +1,8 @@
+wazuh-agent (4.3.8-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 19 Sep 2022 15:00:00 +0000
 
 wazuh-agent (4.3.7-RELEASE) stable; urgency=low
 
