--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -4,6 +4,12 @@ wazuh-agent (4.4.0-RELEASE) stable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Thu, 03 Nov 2022 12:31:50 +0000
 
+wazuh-agent (4.3.9-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 03 Oct 2022 15:00:00 +0000
+
 wazuh-agent (4.3.8-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
