--- a/debs/SPECS/wazuh-manager/debian/changelog
+++ b/debs/SPECS/wazuh-manager/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-manager (4.3.9-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 03 Oct 2022 15:00:00 +0000
+
 wazuh-manager (4.3.8-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
