--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,11 +1,65 @@
-wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
+wazuh-dashboard (4.4.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
- -- Wazuh, Inc <info@wazuh.com>  Sat, 04 Dec 2021 14:04:26 +0000
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 03 Nov 2022 12:31:50 +0000
 
- wazuh-dashboard (4.2.5-1) UNRELEASED; urgency=low
+wazuh-dashboard (4.3.9-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
- -- Wazuh, Inc <info@wazuh.com>  Mon, 15 Nov 2021 16:47:07 +0000
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 03 Oct 2022 15:00:00 +0000
+
+wazuh-dashboard (4.3.8-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 19 Sep 2022 15:00:00 +0000
+
+wazuh-dashboard (4.3.7-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 08 Aug 2022 15:00:00 +0000
+
+wazuh-dashboard (4.3.6-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 07 Jul 2022 15:00:00 +0000
+
+wazuh-dashboard (4.3.5-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Wed, 29 Jun 2022 15:00:00 +0000
+
+wazuh-dashboard (4.3.4-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Tue, 07 Jun 2022 15:41:39 +0000
+
+wazuh-dashboard (4.3.3-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Tue, 31 May 2022 15:41:39 +0000
+
+wazuh-dashboard (4.3.2-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 30 May 2022 15:41:39 +0000
+
+wazuh-dashboard (4.3.1-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Wed, 18 May 2022 12:14:41 +0000
+
+wazuh-dashboard (4.3.0-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 05 May 2022 12:15:57 +0000
