--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -4,6 +4,12 @@ wazuh-indexer (4.4.0-RELEASE) stable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Wed, 18 Jan 2023 12:31:50 +0000
 
+wazuh-indexer (4.3.10-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 10 Nov 2022 15:00:00 +0000
+
 wazuh-indexer (4.3.9-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
