--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -1,4 +1,4 @@
-wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
+wazuh-indexer (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
