--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -2,7 +2,7 @@ wazuh-agent (4.3.11-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
- -- Wazuh, Inc <info@wazuh.com>  Thu, 08 Dic 2022 15:00:00 +0000
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 08 Dec 2022 15:00:00 +0000
 
 wazuh-agent (4.3.10-RELEASE) stable; urgency=low
 
