--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,6 +1,12 @@
+wazuh-agent (4.7.0-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-7-0.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Sat, 28 Oct 2023 10:32:24 +0000
+
 wazuh-agent (4.6.0-RELEASE) stable; urgency=low
 
-  * More info: https://documentation.wazuh.com/current/release-notes/
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-6-0.html
 
  -- Wazuh, Inc <info@wazuh.com>  Mon, 04 Sep 2023 11:56:07 +0000
 
