--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -10,7 +10,7 @@ wazuh-dashboard (4.6.0-RELEASE) stable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Mon, 04 Sep 2023 11:56:07 +0000
 
-wazuh-manager (4.5.0-RELEASE) stable; urgency=low
+wazuh-dashboard (4.5.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-5-0.html
 
