--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,4 +1,4 @@
-wazuh-dashboard (VERSION-RELEASE) stable; urgency=low
+wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
@@ -10,7 +10,7 @@ wazuh-dashboard (4.5.0-RELEASE) unstable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Fri, 30 Jun 2023 12:31:50 +0000
 
-wazuh-dashboard (4.4.5-RELEASE) stable; urgency=low
+wazuh-dashboard (4.4.5-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-4-5.html
 
