--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -1,10 +1,10 @@
-wazuh-dashboard (VERSION-RELEASE) stable; urgency=low
+wazuh-indexer (VERSION-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/
 
  -- Wazuh, Inc <info@wazuh.com>  Fri, 08 Sep 2023 13:46:52 +0000
 
-wazuh-dashboard (4.5.0-RELEASE) unstable; urgency=low
+wazuh-indexer (4.5.0-RELEASE) unstable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-5-0.html
 
