--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,6 +1,6 @@
 wazuh-dashboard (VERSION-RELEASE) unstable; urgency=low
 
-  * More info: https://documentation.wazuh.com/current/release-notes/
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-6-0.html
 
  -- Wazuh, Inc <info@wazuh.com>  Fri, 08 Sep 2023 13:46:52 +0000
 
