--- a/debs/SPECS/wazuh-manager/debian/changelog
+++ b/debs/SPECS/wazuh-manager/debian/changelog
@@ -1,4 +1,10 @@
 
+wazuh-manager (4.4.5-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-4-5.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 10 Jul 2023 12:31:50 +0000
+
 wazuh-manager (4.4.4-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-4-4.html
