--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-dashboard (4.4.5-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-4-5.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 09 Jul 2023 12:31:50 +0000
+
 wazuh-dashboard (4.4.4-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-4-4.html
