--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-agent (4.5.2-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-5-2.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Fri, 04 Aug 2023 00:00:00 +0000
+
 wazuh-agent (4.5.1-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-5-1.html
