--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-wazuh-indexer (4.9.0-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-9-0.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 28 Mar 2024 00:00:00 +0000
+
 wazuh-indexer (4.8.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-8-0.html
