--- a/debs/SPECS/wazuh-agent/debian/changelog
+++ b/debs/SPECS/wazuh-agent/debian/changelog
@@ -1,4 +1,4 @@
-wazuh-wazuh-agent (4.5.4-RELEASE) stable; urgency=low
+wazuh-agent (4.5.4-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-5-4.html
 
