--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,4 +1,4 @@
-wazuh-wazuh-dashboard (4.9.0-RELEASE) stable; urgency=low
+wazuh-dashboard (4.9.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-9-0.html
 
