--- a/stack/indexer/deb/debian/changelog
+++ b/stack/indexer/deb/debian/changelog
@@ -4,6 +4,12 @@ wazuh-indexer (4.7.0-RELEASE) stable; urgency=low
 
  -- Wazuh, Inc <info@wazuh.com>  Tue, 21 Nov 2023 00:00:00 +0000
 
+wazuh-indexer (4.7.0-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-7-0.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Tue, 21 Nov 2023 00:00:00 +0000
+
 wazuh-indexer (4.6.0-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-6-0.html
