--- a/debs/SPECS/wazuh-manager/debian/changelog
+++ b/debs/SPECS/wazuh-manager/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-manager (5.0.0-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-5-0-0.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Thu, 02 Jan 2003 00:00:00 +0000
+
 wazuh-manager (4.8.1-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-8-1.html
