--- a/stack/dashboard/deb/debian/changelog
+++ b/stack/dashboard/deb/debian/changelog
@@ -1,3 +1,9 @@
+wazuh-dashboard (4.7.4-RELEASE) stable; urgency=low
+
+  * More info: https://documentation.wazuh.com/current/release-notes/release-4-7-4.html
+
+ -- Wazuh, Inc <info@wazuh.com>  Mon, 22 Apr 2024 00:00:00 +0000
+
 wazuh-dashboard (4.7.3-RELEASE) stable; urgency=low
 
   * More info: https://documentation.wazuh.com/current/release-notes/release-4-7-3.html
